# haskell-rabi

./: README.md  hammurabi.bas  hammurabi.cabal
src/: Main.hs  MyRandom.hs
