name:                hammurabi
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:
license:             BSD3
license-file:        LICENSE
author:              Charles Moss
maintainer:          example@example.com
copyright:           2016 Charles Moss
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hammurabi
  ghc-options:        -Wall
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      mtl,
                      random
